1693 Resolve small layout issues

--- a/src/scss/base/_summary.scss
+++ b/src/scss/base/_summary.scss
@@ -46,6 +46,9 @@ body.summary {
   ul {
     margin-left: 0rem;
     line-height: 1rem;
+    &.compact {
+      margin-top: 0;
+    }
     li {
       margin-top: 0rem;
     }
@@ -316,6 +319,27 @@ body.summary {
     background-color: rgba(85, 116, 49, 0.15);
     float: left;
     margin: 0px 1px 1px 0px;
+    &.scale-0 {
+      background-color: rgba(244, 176, 131, 1);
+    }
+    &.scale-14 {
+      background-color: rgba(244, 176, 131, 0.6);
+    }
+    &.scale-29 {
+      background-color: rgba(244, 176, 131, 0.3);
+    }
+    &.scale-43, &.scale-33 {
+      //background-color: rgba(85, 116, 49, 1);
+    }
+    &.scale-57 {
+      background-color: rgba(168, 208, 141, 0.3);
+    }
+    &.scale-71 {
+      background-color: rgba(168, 208, 141, 0.6);
+    }
+    &.scale-86, &.scale-67 {
+      background-color: rgba(168, 208, 141, 1);
+    }
   }
 
   &.is-approaches .range_square
@@ -365,11 +389,11 @@ body.summary {
 
   .range_true::before
   {
-    background-color: #768f5a;
+    //background-color: #768f5a;
     float: left;
     margin: 0px 1px 1px 0px;
     padding-left: 1px;
-    color: white;
+    color: $color-brown-dark;
     width: 15px;
     height: 15px;
     line-height: 1em;
