--- a/src/scss/module/_chart.scss
+++ b/src/scss/module/_chart.scss
@@ -146,7 +146,7 @@ $bars-factor: 4;
 body.summary
 {
   .highlights_list {
-    margin: 0;
+    margin: 1px 0 0 0;
     padding: 0;
     li {
       padding-left: 1.2rem;
